--- a/pom.xml
+++ b/pom.xml
@@ -78,25 +78,25 @@
 		<dependency>
 		    <groupId>com.fasterxml.jackson.core</groupId>
 		    <artifactId>jackson-annotations</artifactId>
-		    <version>2.9.8</version>
+		    <version>[2.9.9.1,)</version>
 		</dependency>
 
 		<!-- https://mvnrepository.com/artifact/com.fasterxml.jackson.core/jackson-core -->
 		<dependency>
 		    <groupId>com.fasterxml.jackson.core</groupId>
 		    <artifactId>jackson-core</artifactId>
-		    <version>2.9.8</version>
+		    <version>[2.9.9.1,)</version>
 		</dependency>
 
 		<!-- https://mvnrepository.com/artifact/com.fasterxml.jackson.core/jackson-databind -->
 		<dependency>
 		    <groupId>com.fasterxml.jackson.core</groupId>
 		    <artifactId>jackson-databind</artifactId>
-		    <version>2.9.8</version>
+		    <version>[2.9.9.1,)</version>
 		</dependency>
 
 
-  </dependencies>  
+  </dependencies>
 
     <build>
     <plugins>
@@ -113,7 +113,7 @@
                 </archive>
             </configuration>
         </plugin>
-     
+
         <plugin>
         <artifactId>maven-compiler-plugin</artifactId>
         <version>3.7.0</version>
