--- a/pom.xml
+++ b/pom.xml
@@ -12,7 +12,25 @@
   <description>Green Screens Web Terminal Java Client to generate encrypted URL.</description>
   <name>greenscreens-client</name>
   
-  
+  	<properties>
+		<maven.build.timestamp.format>yyyy-MM-dd HH:mm</maven.build.timestamp.format>
+		<maven.build.release>5.0.0.</maven.build.release>
+		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+		<junit.jupiter.version>5.7.0</junit.jupiter.version>
+		<junit.platform.version>1.7.0</junit.platform.version>
+		<maven.compiler.source>1.8</maven.compiler.source>
+		<maven.compiler.target>1.8</maven.compiler.target>
+		<maven.compiler.version>3.8.1</maven.compiler.version>
+		<maven.eclipse.version>2.10</maven.eclipse.version>
+		<maven.install.version>3.0.0-M1</maven.install.version>
+		<maven.resources.version>3.2.0</maven.resources.version>
+		<maven.jar.version>3.2.0</maven.jar.version>
+		<maven.war.version>3.3.1</maven.war.version>
+		<maven.proguard.version>2.5.1</maven.proguard.version>
+		<maven.test.version>3.0.0-M5</maven.test.version>
+		<jackson.version>2.13.0</jackson.version>
+		<bcastle.version>1.69</bcastle.version>
+	</properties>
   <dependencies>
   
 		<!-- https://mvnrepository.com/artifact/javax.servlet/javax.servlet-api -->
@@ -34,14 +52,14 @@
 		<dependency>
 		    <groupId>org.apache.commons</groupId>
 		    <artifactId>commons-text</artifactId>
-		    <version>1.2</version>
+		    <version>1.9</version>
 		</dependency>
 		
 		<!-- https://mvnrepository.com/artifact/commons-codec/commons-codec -->
 		<dependency>
 		    <groupId>commons-codec</groupId>
 		    <artifactId>commons-codec</artifactId>
-		    <version>1.11</version>
+		    <version>1.15</version>
 		</dependency>
 		
 		
@@ -49,21 +67,21 @@
 		<dependency>
 		    <groupId>org.apache.commons</groupId>
 		    <artifactId>commons-lang3</artifactId>
-		    <version>3.7</version>
+		    <version>3.12.0</version>
 		</dependency>
 		
 		<!-- https://mvnrepository.com/artifact/org.apache.httpcomponents/fluent-hc -->
 		<dependency>
 		    <groupId>org.apache.httpcomponents</groupId>
 		    <artifactId>fluent-hc</artifactId>
-		    <version>4.5.5</version>
+		    <version>4.5.13</version>
 		</dependency>
 		
 		<!-- https://mvnrepository.com/artifact/org.apache.httpcomponents/httpcore -->
 		<dependency>
 		    <groupId>org.apache.httpcomponents</groupId>
 		    <artifactId>httpcore</artifactId>
-		    <version>4.4.9</version>
+		    <version>4.4.15</version>
 		</dependency>
 		
 		
@@ -71,30 +89,24 @@
 		<dependency>
 		    <groupId>org.apache.httpcomponents</groupId>
 		    <artifactId>httpclient</artifactId>
-		    <version>4.5.5</version>
+		    <version>4.5.13</version>
 		</dependency>
 
-		<!-- https://mvnrepository.com/artifact/com.fasterxml.jackson.core/jackson-annotations -->
-		<dependency>
-		    <groupId>com.fasterxml.jackson.core</groupId>
-		    <artifactId>jackson-annotations</artifactId>
-		    <version>[2.9.9.1,)</version>
-		</dependency>
-
-		<!-- https://mvnrepository.com/artifact/com.fasterxml.jackson.core/jackson-core -->
-		<dependency>
-		    <groupId>com.fasterxml.jackson.core</groupId>
-		    <artifactId>jackson-core</artifactId>
-		    <version>[2.9.9.1,)</version>
-		</dependency>
-
-		<!-- https://mvnrepository.com/artifact/com.fasterxml.jackson.core/jackson-databind -->
-		<dependency>
-		    <groupId>com.fasterxml.jackson.core</groupId>
-		    <artifactId>jackson-databind</artifactId>
-		    <version>[2.9.9.1,)</version>
-		</dependency>
-
+			<dependency>
+				<groupId>com.fasterxml.jackson.core</groupId>
+				<artifactId>jackson-annotations</artifactId>
+				<version>${jackson.version}</version>
+			</dependency>
+			<dependency>
+				<groupId>com.fasterxml.jackson.core</groupId>
+				<artifactId>jackson-core</artifactId>
+				<version>${jackson.version}</version>
+			</dependency>
+			<dependency>
+				<groupId>com.fasterxml.jackson.core</groupId>
+				<artifactId>jackson-databind</artifactId>
+				<version>${jackson.version}</version>
+			</dependency>
 
   </dependencies>
 
@@ -103,7 +115,7 @@
         <plugin>
             <groupId>org.apache.maven.plugins</groupId>
             <artifactId>maven-jar-plugin</artifactId>
-            <version>3.0.2</version>
+            <version>3.2.0</version>
             <configuration>
                 <archive>
                     <index>true</index>
@@ -116,10 +128,10 @@
 
         <plugin>
         <artifactId>maven-compiler-plugin</artifactId>
-        <version>3.7.0</version>
+        <version>3.8.1</version>
         <configuration>
-                <source>1.7</source>
-                <target>1.7</target>
+                <source>1.8</source>
+                <target>1.8</target>
         </configuration>
      </plugin>
 
