--- a/pom.xml
+++ b/pom.xml
@@ -8,46 +8,50 @@
   	<url>www.greenscreens.io</url>
   	<name>Green Screens Ltd.</name>
   </organization>
+
   <url>www.greenscreens.io</url>
   <description>Green Screens Web Terminal Java Client to generate encrypted URL.</description>
   <name>greenscreens-client</name>
   
-  	<properties>
-		<maven.build.timestamp.format>yyyy-MM-dd HH:mm</maven.build.timestamp.format>
-		<maven.build.timestamp.format>yyyy-MM-dd HH:mm</maven.build.timestamp.format>
-		<maven.build.release>6.0.0.</maven.build.release>
-		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-		<junit.jupiter.version>5.7.0</junit.jupiter.version>
-		<junit.platform.version>1.7.0</junit.platform.version>
-		<maven.compiler.source>1.8</maven.compiler.source>
-		<maven.compiler.target>1.8</maven.compiler.target>
-		<maven.compiler.version>3.8.1</maven.compiler.version>
-		<maven.eclipse.version>2.10</maven.eclipse.version>
-		<maven.install.version>3.0.0-M1</maven.install.version>
-		<maven.resources.version>3.2.0</maven.resources.version>
-		<maven.jar.version>3.2.0</maven.jar.version>
-		<maven.war.version>3.3.1</maven.war.version>
-		<maven.proguard.version>2.5.1</maven.proguard.version>
-		<maven.test.version>3.0.0-M5</maven.test.version>
-		<jackson.version>2.15.0</jackson.version>
-		<bcastle.version>1.81</bcastle.version>
-		<slf4j.version>1.7.36</slf4j.version>		
-	</properties>
+  <properties>
+	<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+	<maven.build.timestamp.format>yyyy-MM-dd HH:mm</maven.build.timestamp.format>
+	<maven.build.timestamp.format>yyyy-MM-dd HH:mm</maven.build.timestamp.format>
+	<maven.build.release>6.0.0.</maven.build.release>
+	<maven.compiler.source>1.8</maven.compiler.source>
+	<maven.compiler.target>1.8</maven.compiler.target>
+	
+	<maven.compiler.version>3.14.1</maven.compiler.version>
+	<maven.eclipse.version>2.10</maven.eclipse.version>
+		<maven.install.version>3.1.2</maven.install.version>
+	<maven.jar.version>3.2.0</maven.jar.version>
+	<maven.proguard.version>2.5.1</maven.proguard.version>
+	<maven.resources.version>3.2.0</maven.resources.version>
+	<maven.test.version>3.0.0-M5</maven.test.version>
+	<maven.war.version>3.3.1</maven.war.version>
+
+	<junit.jupiter.version>5.7.0</junit.jupiter.version>
+	<junit.platform.version>1.7.0</junit.platform.version>
+	
+	<jackson.version>2.15.4</jackson.version>
+	<bcastle.version>1.82</bcastle.version>
+	<slf4j.version>1.7.36</slf4j.version>		
+  </properties>
   <dependencies>
-  
+
 		<!-- https://mvnrepository.com/artifact/javax.servlet/javax.servlet-api -->
 		<dependency>
 		    <groupId>javax.servlet</groupId>
 		    <artifactId>javax.servlet-api</artifactId>
-		    <version>3.1.0</version>
+		    <version>4.0.1</version>
 		    <scope>provided</scope>
 		</dependency>
-		
+
 		<!-- https://mvnrepository.com/artifact/com.eatthepath/java-otp -->
 		<dependency>
 		    <groupId>com.eatthepath</groupId>
 		    <artifactId>java-otp</artifactId>
-		    <version>0.3.1</version>
+		    <version>0.4.0</version>
 		</dependency>
 		
 		<dependency>
@@ -71,46 +75,46 @@
 			<artifactId>bcpkix-jdk18on</artifactId>
 			<version>${bcastle.version}</version>
 		</dependency>
-		
+
 		<!-- https://mvnrepository.com/artifact/org.apache.commons/commons-text -->
 		<dependency>
 		    <groupId>org.apache.commons</groupId>
 		    <artifactId>commons-text</artifactId>
-		    <version>1.10.0</version>
+		    <version>1.14.0</version>
 		</dependency>
-		
+
 		<!-- https://mvnrepository.com/artifact/commons-codec/commons-codec -->
 		<dependency>
 		    <groupId>commons-codec</groupId>
 		    <artifactId>commons-codec</artifactId>
-		    <version>1.15</version>
+		    <version>1.20.0</version>
 		</dependency>
-		
-		
+
+
 		<!-- https://mvnrepository.com/artifact/org.apache.commons/commons-lang3 -->
 		<dependency>
 		    <groupId>org.apache.commons</groupId>
 		    <artifactId>commons-lang3</artifactId>
-		    <version>3.12.0</version>
+		    <version>3.19.0</version>
 		</dependency>
 		
 		 
 		<dependency>
 		    <groupId>org.apache.httpcomponents</groupId>
-		    <artifactId>fluent-hc</artifactId>
-		    <version>4.5.13</version>
+		    <artifactId>httpcore</artifactId>
+		    <version>4.4.16</version>
 		</dependency>
 		<dependency>
 		    <groupId>org.apache.httpcomponents</groupId>
-		    <artifactId>httpcore</artifactId>
-		    <version>4.4.15</version>
+		    <artifactId>fluent-hc</artifactId>
+		    <version>4.5.14</version>
 		</dependency>
 		<dependency>
 		    <groupId>org.apache.httpcomponents</groupId>
 		    <artifactId>httpclient</artifactId>
-		    <version>4.5.13</version>
+		    <version>4.5.14</version>
 		</dependency>
-		
+
 
 		<!--
 		<dependency>
@@ -125,21 +129,21 @@
 		</dependency>
 		-->
 
-			<dependency>
-				<groupId>com.fasterxml.jackson.core</groupId>
-				<artifactId>jackson-annotations</artifactId>
-				<version>${jackson.version}</version>
-			</dependency>
-			<dependency>
-				<groupId>com.fasterxml.jackson.core</groupId>
-				<artifactId>jackson-core</artifactId>
-				<version>${jackson.version}</version>
-			</dependency>
-			<dependency>
-				<groupId>com.fasterxml.jackson.core</groupId>
-				<artifactId>jackson-databind</artifactId>
-				<version>${jackson.version}</version>
-			</dependency>
+		<dependency>
+			<groupId>com.fasterxml.jackson.core</groupId>
+			<artifactId>jackson-annotations</artifactId>
+			<version>${jackson.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>com.fasterxml.jackson.core</groupId>
+			<artifactId>jackson-core</artifactId>
+			<version>${jackson.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>com.fasterxml.jackson.core</groupId>
+			<artifactId>jackson-databind</artifactId>
+			<version>${jackson.version}</version>
+		</dependency>
   </dependencies>
 
     <build>
@@ -147,7 +151,7 @@
         <plugin>
             <groupId>org.apache.maven.plugins</groupId>
             <artifactId>maven-jar-plugin</artifactId>
-            <version>3.2.0</version>
+            <version>3.2.2</version>
             <configuration>
                 <archive>
                     <index>true</index>
@@ -160,7 +164,7 @@
 
         <plugin>
         <artifactId>maven-compiler-plugin</artifactId>
-        <version>3.8.1</version>
+        <version>3.14.1</version>
         <configuration>
                 <source>${maven.compiler.source}</source>
                 <target>${maven.compiler.target}</target>
